// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snippet parses an highlighted snippet attribute of hit object 1`] = `
<span
  className="ais-Snippet"
>
  <span
    className="ais-Snippet-nonHighlighted"
  >
    awesome 
  </span>
  <em
    className="ais-Snippet-highlighted"
  >
    hi
  </em>
  <span
    className="ais-Snippet-nonHighlighted"
  >
    ghlighted 
  </span>
  <em
    className="ais-Snippet-highlighted"
  >
    hi
  </em>
  <span
    className="ais-Snippet-nonHighlighted"
  >
    t!
  </span>
</span>
`;

exports[`Snippet renders a hit with a custom className 1`] = `
<span
  className="ais-Snippet MyCustomSnippet"
>
  <span
    className="ais-Snippet-nonHighlighted"
  >
    awesome 
  </span>
  <em
    className="ais-Snippet-highlighted"
  >
    hi
  </em>
  <span
    className="ais-Snippet-nonHighlighted"
  >
    ghlighted 
  </span>
  <em
    className="ais-Snippet-highlighted"
  >
    hi
  </em>
  <span
    className="ais-Snippet-nonHighlighted"
  >
    t!
  </span>
</span>
`;

exports[`Snippet renders a hit with a custom tag correctly 1`] = `
<span
  className="ais-Snippet"
>
  <span
    className="ais-Snippet-nonHighlighted"
  >
    awesome 
  </span>
  <strong
    className="ais-Snippet-highlighted"
  >
    hi
  </strong>
  <span
    className="ais-Snippet-nonHighlighted"
  >
    ghlighted 
  </span>
  <strong
    className="ais-Snippet-highlighted"
  >
    hi
  </strong>
  <span
    className="ais-Snippet-nonHighlighted"
  >
    t!
  </span>
</span>
`;
